The serviceInterval might finally work. For now stopping work on them and switching to alternative data storage and loading mechanics.